# irc-relay

./: .gitignore  COMMENTARY  RelayMessages.agda  backend.rb  excel.rb  index.html  irc-relay.ipr  irc-relay.rb  log-database.rb  pom.xml  webclient.js
old-src/main/scala/ext/: Json.scala  extensions.scala
old-src/main/scala/se/htns/irc/: main.scala  messages.scala  server-handler.scala
old-src/main/scala/se/htns/utilities/: BinarySemaphore.scala  GuessEncoding.scala
src/hs-client/: Channels.hs  Connection.hs  HsClient.hs  Main.hs  RelayClientUserInterface.hs  UserInterface.hs  hs-client.cabal
src/main/scala/se/htns/client/: client-handler.scala  protocol.txt
src/main/scala/se/htns/io/: accepter.scala
src/main/scala/se/htns/irc/: main.scala  server-handler.scala  server-logic.scala
src/main/scala/se/htns/lineio/: line-io.scala
src/main/scala/se/htns/utilities/: Startable.scala
src/se/htns/irc/: IRCMessage.scala  IRCServerConnection.scala  IRCServerHandler.scala  IRCServerInfo.scala  IRCServerLineReader.scala  IRCServerLineWriter.scala  IRCServerUserSettings.scala  LineSocket.scala  Main.scala  main.scala  messages.scala  server-logic.scala
src/se/htns/irc/specification/: IRCParserSpec.scala  IRCServerHandlerSpec.scala
src/se/htns/lineio/: line-io.scala
src/se/htns/utilities/: UntilNull.scala
src/test/scala/: irc-parser-tests.scala
static/: client.js  index.html
static/jquery-ui/: index.html
